@@ -107,7 +107,6 @@ public class HfsProps extends Props
       properties.put( COMBINE_INPUT_FILES_SAFE_MODE, Boolean.toString( safeMode ) );
     }
 
-
   /**
    * Method setCombinedInputMaxSize sets the maximum input split size to be used.
    * <p/>
@@ -120,6 +119,11 @@ public class HfsProps extends Props
     {
     if( size != null )
       properties.put( COMBINE_INPUT_FILES_SIZE_MAX, Long.toString( size ) );
+    }
+
+  public static HfsProps hfsProps()
+    {
+    return new HfsProps();
     }
 
   public HfsProps()
@@ -225,7 +229,6 @@ public class HfsProps extends Props
 
     return this;
     }
-
 
   @Override
   protected void addPropertiesTo( Properties properties )
